# komrad-lang-golden-boy

./: .gitignore  Cargo.toml  README.md
crates/komrad-agent/: Cargo.toml
crates/komrad-agent/src/: agent.rs  closure.rs  execute.rs  lib.rs  macros.rs  scope.rs  stdlib_agent.rs  try_bind.rs
crates/komrad-agents/: Cargo.toml
crates/komrad-agents/src/: agent_agent.rs  assert_agent.rs  default_agents.rs  dynamic_agent.rs  fs_agent.rs  io_agent.rs  json_agent.rs  lib.rs  macros.rs  registry_agent.rs  spawn_agent.rs  stdlib_agent.rs
crates/komrad-agents/tests/: test_core_agents.rs
crates/komrad-ai/: Cargo.toml
crates/komrad-ai/examples/: ollama.rs
crates/komrad-ai/src/: conversation.rs  lib.rs  ollama.rs
crates/komrad-ast/: Cargo.toml
crates/komrad-ast/src/: agent.rs  ast.rs  channel.rs  convert.rs  error.rs  lib.rs  message.rs  number.rs  operators.rs  scope.rs  sexpr.rs  type_expr.rs  typed.rs  types.rs  value.rs  value_type.rs
crates/komrad-cli/: Cargo.toml
crates/komrad-cli/src/: banner.rs  cli.rs  lib.rs  main.rs
crates/komrad-macros/: Cargo.toml
crates/komrad-macros/src/: lib.rs  macros.rs
crates/komrad-parser/: Cargo.toml
crates/komrad-parser/src/: error.rs  lib.rs  module_builder.rs  parser.rs  sexpr.rs  span.rs
crates/komrad-parser/src/parse/: binary_expressions.rs  block.rs  embedded_block.rs  expressions.rs  fields.rs  handlers.rs  identifier.rs  lines.rs  mod.rs  primitives.rs  statements.rs  strings.rs  value_type.rs
crates/komrad-parser/src/parse/expressions/: binary_expressions.rs  call_expression.rs  expression.rs  mod.rs  parse_expression.rs
crates/komrad-parser/src/parse/handlers/: handler.rs  holes.rs  mod.rs  primitives.rs
crates/komrad-parser/tests/: test_if_else_parsing.rs
crates/komrad-types/: Cargo.toml
crates/komrad-types/src/: address.rs  channel.rs  error.rs  lib.rs  operators.rs  pattern.rs  reducer.rs  scope.rs  sexpr.rs  types.rs
crates/komrad-vm/: Cargo.toml
crates/komrad-vm/src/: bind.rs  execute.rs  lib.rs  module.rs  scope.rs  system.rs  try_bind.rs
crates/komrad-vm/src/agents/: dynamic_agent.rs  mod.rs
crates/komrad-vm/src/module/: mod.rs  module_actor.rs  module_api.rs  module_command.rs  module_id.rs
crates/komrad-vm/tests/: test_modules.rs
crates/komrad-web/: Cargo.toml
crates/komrad-web/examples/: hyper_demo.rs
crates/komrad-web/src/: http_listener.rs  http_request_agent.rs  http_response_agent.rs  http_template.rs  lib.rs  request.rs  response.rs  tera_agent.rs  websocket_agent.rs
crates/komrad-web/src/http_listener/: actix_listener_agent.rs  axum_listener_agent.rs  config.rs  http_listener_agent.rs  http_response_agent.rs  hyper_listener_agent.rs  mod.rs  warp_listener_agent.rs
examples/: actix-listener.kom  alice.kom  bob.kom  dynamic-list.kom  expander.kom  fields.kom  fizzbuzz.kom  handlers.kom  hello-world.kom  html-block.kom  http-responses.kom  hyper-listener.kom  if.kom  komrad_as_library.rs  lists.kom  main.kom  quine.kom  scopes.kom  strings.kom  tera.kom  warp-listener.kom  websockets.kom
examples/actix/: actix-listener.kom
examples/ai/: chat.kom  generate.kom
examples/ai/templates/: chat.html
examples/conditionals/: if-else.kom  if.kom  inequalities.kom
examples/http/: axum-listener.kom  hyper-listener.kom  warp-listener.kom  websockets.kom
examples/syntax/: dict.kom  fields.kom  lists-calls.kom  loops.kom  scopes.kom
examples/templates/: banner.html  chat.html  counter.html
src/: main.rs
templates/: banner.html
