[package]
name = "komrad-lang"
version = "0.1.0"
edition = "2024"

[dependencies]
komrad-parser = { path = "crates/komrad-parser" }
komrad-types = { path = "crates/komrad-types" }
komrad-cli = { path = "crates/komrad-cli" }

tokio.workspace = true

[workspace]
resolver = "2"
members = [".", "crates/komrad-cli", "crates/komrad-parser", "crates/komrad-types", "crates/komrad-web"]

[workspace.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "io-util", "io-std", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "registry"] }
thiserror = "2.0.12"
nom = "8.0.0"
