[package]
name = "komrad-lang"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "komrad"
path = "src/main.rs"

[dependencies]
komrad-parser = { path = "crates/komrad-parser" }
komrad-cli = { path = "crates/komrad-cli" }
komrad-vm = { path = "crates/komrad-vm" }
komrad-ast = { path = "crates/komrad-ast" }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[workspace]
resolver = "2"
members = [".", "crates/komrad-agent", "crates/komrad-agents", "crates/komrad-ast", "crates/komrad-cli", "crates/komrad-parser", "crates/komrad-vm", "crates/komrad-web"]

[workspace.dependencies]
async-trait = "0.1.87"
dashmap = "7.0.0-rc2"
futures = { version = "0.3.31", features = [] }
miette = { version = "7.5.0", features = ["fancy"] }
nom = { version = "8.0.0", features = ["std", "alloc", "docsrs"] }
nom_locate = "5.0.0"
owo-colors = "4.2.0"
thiserror = "2.0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "io-util", "io-std", "signal"] }
tokio-util = { version = "0.7.13", features = [] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "registry"] }
uuid = { version = "1.15.1", features = ["v7", "serde"] }
