[package]
name = "komrad-lang"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "komrad"
path = "src/main.rs"

[dependencies]
komrad-parser = { path = "crates/komrad-parser" }
komrad-cli = { path = "crates/komrad-cli" }
komrad-vm = { path = "crates/komrad-vm" }
komrad-ast = { path = "crates/komrad-ast" }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[workspace]
resolver = "2"
members = [".", "crates/komrad-agent", "crates/komrad-agents", "crates/komrad-ai", "crates/komrad-ast", "crates/komrad-cli", "crates/komrad-macros", "crates/komrad-parser", "crates/komrad-vm", "crates/komrad-web"]

[workspace.dependencies]
async-trait = "0.1.87"
chrono = { version = "0.4", features = ["alloc", "clock", "serde", "iana-time-zone"] }
dashmap = "7.0.0-rc2"
futures = { version = "0.3.31", features = [] }
miette = { version = "7.5.0", features = ["fancy"] }
nom = { version = "8.0.0", features = ["std", "alloc", "docsrs"] }
nom_locate = "5.0.0"
owo-colors = "4.2.0"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["alloc", "derive", "std"] }
serde_json = { version = "1.0.140", features = ["std", "alloc", "preserve_order"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "io-util", "io-std", "signal", "full"] }
tokio-tungstenite = { version = "0.26.2", features = ["stream", "connect", "handshake", "url"] }
tokio-stream = { version = "0.1.11", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["full", "compat"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "registry"] }
uuid = { version = "1.15.1", features = ["v7", "serde"] }
