[package]
name = "komrad-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
komrad-ast = { path = "../komrad-ast" }
komrad-macros = { path = "../komrad-macros" }

async-trait.workspace = true
dashmap.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
log = "0.4.26"