[package]
name = "komrad-agents"
version = "0.1.0"
edition = "2024"

[dependencies]
komrad-ast = { path = "../komrad-ast" }
komrad-ai = { path = "../komrad-ai" }
komrad-agent = { path = "../komrad-agent" }
komrad-web = { path = "../komrad-web" }
komrad-macros = { path = "../komrad-macros" }

async-trait.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
tokio-stream.workspace = true
quote = "1.0.39"

[features]
default = ["hyper", "templates", "ollama"]
axum = ["komrad-web/axum"]
hyper = ["komrad-web/hyper"]
warp = ["komrad-web/warp"]
templates = ["komrad-web/templates"]
ollama = ["komrad-ai/ollama"]