[package]
name = "komrad-ast"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
dashmap.workspace = true
thiserror.workspace = true
miette.workspace = true
uuid.workspace = true
tracing.workspace = true
nom.workspace = true
nom_locate.workspace = true
owo-colors.workspace = true
hex = "0.4.3"
