[package]
name = "komrad-types"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
dashmap.workspace = true
miette.workspace = true
nom.workspace = true
nom_locate.workspace = true
owo-colors.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
thiserror.workspace = true
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v7"] }

[features]
default = []
wasm = []

