[package]
name = "komrad-web"
version = "0.1.0"
edition = "2024"

[dependencies]
komrad-parser = { path = "../komrad-parser" }
komrad-ast = { path = "../komrad-ast" }
komrad-agent = { path = "../komrad-agent" }
async-trait.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tera = { version = "1.20.0", optional = true }
hyper = { version = "1.6.0", optional = true, features = ["full", "server"] }
http-body-util = { version = "0.1", optional = true, features = ["full"] }
hyper-util = { version = "0.1", optional = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
futures.workspace = true
http = "1.3.1"
warp = { version = "0.3", features = ["websocket", "multipart", "async-compression"], optional = true }
bytes = "1.10.1"
actix-web = { version = "4.10.2", optional = true, features = ["unicode", "cookies", "http2"] }
actix-ws = { version = "0.3.0", optional = true }
axum = { version = "0.8.1", optional = true, features = ["ws", "tokio", "json"] }
tower-http = { version = "0.6.2", features = ["trace", "cors"], optional = true }

[features]
web = []

default = ["hyper", "templates"]
templates = ["dep:tera"]
hyper = ["web", "dep:hyper", "dep:http-body-util", "dep:hyper-util"]
