[package]
name = "komrad-web"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
axum = { version = "0.8.1", optional = true, features = ["ws", "tokio", "json"] }
base64 = "0.22.1"
bytes = "1.10.1"
futures.workspace = true
http = "1.3.1"
http-body-util = { version = "0.1", optional = true, features = ["full"] }
hyper = { version = "1.6", optional = true, features = ["full", "server", "http1"] }
hyper-util = { version = "0.1", optional = true, features = ["full", "server", "http1"] }
komrad-agent = { path = "../komrad-agent" }
komrad-ast = { path = "../komrad-ast" }
komrad-parser = { path = "../komrad-parser" }
sha1 = "0.11.0-pre.5"
tera = { version = "1.20.0", optional = true }
thiserror.workspace = true
tokio-stream.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tower-http = { version = "0.6.2", features = ["trace", "cors"], optional = true }
tracing-subscriber.workspace = true
tracing.workspace = true
tungstenite = "0.26.2"
warp = { version = "0.3", features = ["websocket", "multipart", "async-compression"], optional = true }
futures-util = "0.3.31"

[features]
web = []

default = ["hyper", "templates"]

templates = ["dep:tera"]

axum = ["web", "hyper", "dep:axum", "dep:tower-http"]

warp = ["web", "dep:warp", "dep:hyper-util", "dep:http-body-util"]

hyper = ["web", "dep:hyper", "dep:hyper-util", "dep:http-body-util"]

